Final typos from Farmer

--- a/abstract.tex
+++ b/abstract.tex
@@ -17,10 +17,11 @@
   such trade-offs, to which this article contributes.
   We simulate the performance of a family of algorithms on a
   one-product system, and find that in
-  particular situations, the popular Certainty Equivalent Control policy
+  particular situations, the popular, but approximate, Certainty
+  Equivalent Control policy
   can perform better than an optimal, expected value maximising policy more than
   \emph{half of the time}.
-  However, this algorithm is less robust to model misspecification, and thus
+  However, this approximate algorithm is less robust to model misspecification, and thus
   requires that the retailer spends more resources on state estimation.
 }
 \end{document}
