--- a/conclusion.tex
+++ b/conclusion.tex
@@ -6,7 +6,7 @@
 
 \section{Conclusion}\label{sec:conclusion}
 In this article we have looked at a mathematical formulation of a
-retail pricing problem for profit maximisation, and investigated the
+retail pricing problem for profit maximisation, and have investigated the
 performance of different algorithms that balance practicality
 with degree of suboptimality. The motivation is to better understand
 how well the suboptimal policies approximate the returns from the
