Change appendix to check profit L2 difference

--- a/main.tex
+++ b/main.tex
@@ -126,7 +126,8 @@ Things I think can improve the paper (and make it more precise)
 
 
 %\appendix
-\subfile{appendix_policydiff}
+%\subfile{appendix_policydiff}
+\subfile{appendix_profitdiff}
 
 
 \end{document}
