Fix noise in profit_diff_heatmaps

--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -136,7 +136,7 @@ The numerical experiments in the article are all made
 with a demand function of the family $q(a)=q_1e^{-q_2a}$,  for a
 single combination of the  system
 parameters. We refer to the appendix for a
-comparison between the Bellman policy and CEC functions for a larger
+comparison between the Bellman policy and CEC policy for a larger
 range of parameters.
 
 \todo[inline]{Can we get error bounds comparing $\widetilde{v}$ and
