--- a/appendix_profitdiff.tex
+++ b/appendix_profitdiff.tex
@@ -64,7 +64,7 @@ The parameters chosen in this article's numerical experiments
 are $C=1,\gamma=0.05,q_1=e^2/3\approx2.5,q_2=3$. This point lies
 in the region where the relative difference is around $0.016$ --- see the
 white dot in the
-bottom, left subfigure in \Cref{fig:policy_diff_heatmaps}.
+bottom, left subfigure in \Cref{fig:profit_diff_heatmaps}.
 This difference is in the middle of that seen for all the
 combinations of parameters, so the conclusions made in the article
 should be considered as relevant for a wider range of systems.
