--- a/appendix_profitdiff.tex
+++ b/appendix_profitdiff.tex
@@ -82,27 +82,27 @@ grey dots in \Cref{fig:profit_diff_heatmaps}.
 \begin{table}[htbp]
   \centering
   \begin{tabular}{llllcccc}
-    $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mbox{VaR}_{0.05}$
-    &Median & $\mbox{VaR}_{0.95}$ &$L_2$\\
+    $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mathcal Q_{0.05}$
+    &Median & $\mathcal Q_{0.95}$ &$L_2$\\
     \toprule
-    $0.25$ & $0.05$ & $2.0$ & $4.0$ & -0.4 & -0.3 & 0.6 & 0.4 \\
-    $0.25$ & $0.1$ & $1.33$ & $2.67$ & -0.5 & -0.0 & 0.6 & 0.3 \\
-    $0.5$ & $0.05$ & $2.67$ & $4.0$ & -0.6 & -0.6 & 1.9 & 1.1 \\
-    $0.5$ & $0.1$ & $2.0$ & $2.67$ & -0.9 & -0.6 & 1.9 & 1.2 \\
-    $1.0$ & $0.05$ & $1.33$ & $4.0$ & -1.2 & -1.1 & 5.3 & 2.7 \\
-    $1.0$ & $0.1$ & $2.67$ & $2.67$ & -1.5 & -1.3 & 5.8 & 2.9\\
+    $0.25$ & $0.05$ & $2.0$ & $4.0$  & \textbf{-0.4} & \textbf{-0.3} & \textbf{0.6} & \textbf{0.4}\\
+    $0.25$ & $0.1$ & $1.33$ & $2.67$ & \textbf{-0.5} & \textbf{-0.0} & \textbf{0.6} & \textbf{0.3}\\
+    $0.5$ & $0.05$ & $2.67$ & $4.0$  & \textbf{-0.6} & \textbf{-0.6} & \textbf{1.9} & \textbf{1.1}\\
+    $0.5$ & $0.1$ & $2.0$ & $2.67$   & \textbf{-0.9} & \textbf{-0.6} & \textbf{1.9} & \textbf{1.2}\\
+    $1.0$ & $0.05$ & $1.33$ & $4.0$  & \textbf{-1.2} & \textbf{-1.1} & \textbf{5.3} & \textbf{2.7}\\
+    $1.0$ & $0.1$ & $2.67$ & $2.67$  & \textbf{-1.5} & \textbf{-1.3} & \textbf{5.8} & \textbf{2.9}\\
     &&&&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$\\
     \bottomrule
   \end{tabular}
   \caption{Statistics comparing $P^{\alpha^B}$ and $P^{\alpha^C}$ for six different
-    parameter combinations. The columns $\mbox{VaR}_s$ represent the
-    $s$-Value-at-Risk, or the $s^{\text{th}}$ quantile of the relative
+    parameter combinations. The columns $\mathcal Q_s$ represent the
+    the $s^{\text{th}}$ quantile of the relative
     difference
-    $1-P^{\alpha^C}/P^{\alpha^B}$. Median is the same as $\mbox{VaR}_{0.5}$.
+    $1-P^{\alpha^C}/P^{\alpha^B}$. Median is the same as $\mathcal Q_{0.5}$.
     The values in the column $L_2$ refers to the relative $L_2$
     difference $\|P^{\alpha^B}-P^{\alpha^C}\|_2/\|P^{\alpha^B}\|_2$
     from \Cref{fig:profit_diff_heatmaps}. Each of the parameter
-    combinations correspond to a gray dot in \Cref{fig:profit_diff_heatmaps}.
+    combinations correspond to a grey dot in \Cref{fig:profit_diff_heatmaps}.
   }\label{tbl:paramcomparisons}
 \end{table}
 \biblio
