--- a/conclusion.tex
+++ b/conclusion.tex
@@ -28,7 +28,7 @@ The results in this article underscores the importance of looking at the impact
 different suboptimal algorithms have on the distribution of
 an objective, and not only the impact of
 marginalised statistics such as the expected value.
-\todo[inline]{Mention model uncertainty?}
+%\todo[inline]{Mention model uncertainty?}
 
 The model problem in this article is fairly simple, and
 we propose two specific lines for future research that
