--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -1,52 +1,13 @@
 \documentclass[main.tex]{subfiles}
 \usepgfplotslibrary{statistics}
-
+\usepackage[group-separator={,}]{siunitx}
 \begin{document}
 
 \listoftodos
 
-\section{Suboptimal approximations}\label{sec:suboptimal_approximations}
-\todo[inline]{Should parts of this introductory discussion go into the
-  Introduction section?}
-There are many reasons for practitioners to look for suboptimal
-approximations to the stochastic control problem, rather than
-computing the optimal policy functions for the whole decision period.
-The modelling of a real system and decision process can become very
-complicated, and  we must  create a very
-large state space in order to make use of the Bellman equation.
-We often have to take into account unobservable
-state variables, like estimated parameters, and constraints\todo{Jeff:
-you haven't mentioned constraints before}
-that may
-depend on history. Decision-makers in business may change their mind
-about the objective over the course of the decision period, which should
-be incorporated in the modelling as parameters with corresponding, estimated
-probability distributions.
-From a software implementation perspective, writing code that can
-solve the Bellman equation efficiently can be much more complicated
-than other methods.
-Finally, the dimensions of the state, policy and exogenous
-information spaces can quickly make a numerical solution to the Bellman
-equation intractable. An explosion of dimensions can happen very
-quickly, even for one-product problems. In
-\citet{bertsimas2001dynamic}, the authors model a simple
-one-product demand function with uncertainty in the function
-parameters, and present an eight-dimensional dynamic programming
-solution to the problem.
-Much of the focus in the research community has therefore been on
-developing tractable algorithms with comparable performance to the
-optimal policies, see for example
-\citet{powell2011approximate,bertsekas2012dynamic}.
-
-An advantage of creating explicit policy functions at the start of the decision
-process, is the speed at which we can make our decisions in the
-future. In the classic pricing problems, the dynamics of the
-underlying system do not require instant pricing decisions. Thus,
-suboptimal decision rules that are created on-line, i.e.~as they are needed, are often used
-instead (\citet{talluri2006theory}). Estimation of the system and optimisation of prices are
-normally separated, and constraints are more easily updated at each
-decision point.
-
+\section{Suboptimal
+  approximations}\label{sec:suboptimal_approximations}
+\todo[inline]{Update introduction here}
 In this section we will look at a class of algorithms known as
 \emph{lookahead policies}, that calculate the decisions on-line.
 Whenever a decision must be made, these methods simulate the future
