--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -122,17 +122,7 @@ range of parameters.
 %   require $q_2\geq 1$ and maybe that $C$ only takes certain values}
 
 \subsubsection{Example system}\label{sec:cec_comparison_example}
-The example system in \Cref{sec:bellman_example_markdown} has a demand
-function of the form $q(a)=q_1e^{-q_2a}$, where $q_1=e^2/3$ and
-$q_2=3$. We can therefore compare the optimal Bellman policy with the
-pricing policy that a CEC algorithm would create.
-Denote the Bellman policy function by $a^B$, and consider
-$a^B(t,s)-a^C(t,s)$ for each $t=0,\dots,T-1$. The plot in
-\Cref{fig:bellman_det_policy_difference} shows this difference.
-Both of the policy functions reach the upper bound in $A$ for small values
-of $s$, but most of the time, the Bellman policy is pricing the products
-lower than the CEC policy.
-\begin{figure}[p]
+\begin{figure}[htbp]
   \centering
   \begin{tikzpicture}
     \begin{axis}[
@@ -161,37 +151,49 @@ lower than the CEC policy.
     \end{axis}
   \end{tikzpicture}
 
-  \vspace{1em}
-  \begin{tikzpicture}
-    \begin{axis}[
-      xlabel={$s$},
-      ylabel={$[a^B(t,s)-a^C(t,s)]/a^B(t,s)$},
-      title={\hspace{1em}Relative function difference},
-      legend cell align=left,
-      ]
-      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{8}/\thisrowno{5}},col sep=comma]
-      {./data/markdown_bellman_det_val_policy.csv};
-      \addlegendentry{$t=0$};
-      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{9}/\thisrowno{6}},col sep=comma]
-      {./data/markdown_bellman_det_val_policy.csv};
-      \addlegendentry{$t=1$};
-      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{10}/\thisrowno{7}},col sep=comma]
-      {./data/markdown_bellman_det_val_policy.csv};
-      \addlegendentry{$t=2$};
-    \end{axis}
-  \end{tikzpicture}
+  % \vspace{1em}
+  % \begin{tikzpicture}
+  %   \begin{axis}[
+  %     xlabel={$s$},
+  %     ylabel={$[a^B(t,s)-a^C(t,s)]/a^B(t,s)$},
+  %     title={\hspace{1em}Relative function difference},
+  %     legend cell align=left,
+  %     ]
+  %     \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{8}/\thisrowno{5}},col sep=comma]
+  %     {./data/markdown_bellman_det_val_policy.csv};
+  %     \addlegendentry{$t=0$};
+  %     \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{9}/\thisrowno{6}},col sep=comma]
+  %     {./data/markdown_bellman_det_val_policy.csv};
+  %     \addlegendentry{$t=1$};
+  %     \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{10}/\thisrowno{7}},col sep=comma]
+  %     {./data/markdown_bellman_det_val_policy.csv};
+  %     \addlegendentry{$t=2$};
+  %   \end{axis}
+  % \end{tikzpicture}
+  % \todo[inline]{Remove the relative difference comparison?}
   \caption{Comparison of the CEC and Bellman policy functions $a^C$ and
     $a^B$.
     The CEC function sets
     higher prices than the Bellman function for large $s$.
-    Observe the spikes in the difference plot for $t<T-1$:
-    In a small interval, $a^B(t,s)\geq a^C(t,s)$, before both functions
-    reach the boundary price $a_{\mathrm{max}}=1$. This sudden, relative increase in
-    the Bellman function compared to $a^C$ is due to the
-    diffusion of the value function caused by the
-    random variables $W_t$.
+    % Observe the spikes in the difference plot for $t<T-1$:
+    % In a small interval, $a^B(t,s)\geq a^C(t,s)$, before both functions
+    % reach the boundary price $a_{\mathrm{max}}=1$. This sudden, relative increase in
+    % the Bellman function compared to $a^C$ is due to the
+    % diffusion of the value function caused by the
+    % random variables $W_t$.
   }\label{fig:bellman_det_policy_difference}
 \end{figure}
+
+The example system in \Cref{sec:bellman_example_markdown} has a demand
+function of the form $q(a)=q_1e^{-q_2a}$, where $q_1=e^2/3$ and
+$q_2=3$. We can therefore compare the optimal Bellman policy with the
+pricing policy that a CEC algorithm would create.
+Denote the Bellman policy function by $a^B$, and consider
+$a^B(t,s)-a^C(t,s)$ for each $t=0,\dots,T-1$. The plot in
+\Cref{fig:bellman_det_policy_difference} shows this difference.
+Both of the policy functions reach the upper bound in $A$ for small values
+of $s$, but most of the time, the Bellman policy is pricing the products
+lower than the CEC policy.
 
 What is more important than how the policy function works, is how it
 impacts the goal of the decision-process. Thus, we would like to see
@@ -207,7 +209,7 @@ However, marginalising a random variable with the expectation operator
 loses a lot of information which can be of interest.
 An approximation of the distributions of $P^{\alpha^B}, P^{\alpha^C}$
 and their difference
-$P^{\alpha^B}-P^{\alpha^C}$, based on $1000$ realisations of the
+$P^{\alpha^B}-P^{\alpha^C}$, based on \num{10000} realisations of the
 underlying $W$, can be seen in \Cref{fig:bellman_det_vals}.
 Indeed in the experiment, the average value of following the
 Bellman policy is higher than following the CEC policy.
@@ -226,8 +228,8 @@ profits in the remaining realisations.
       xlabel=$P^{\alpha^B}$,
       ylabel=Count,
       title={Simulations of Bellman policy},
-      xmin=0.57, xmax=0.69,
-      ymax=180,
+      xmin=0.565, xmax=0.695,
+      ymax=2000,
       ]
       \addplot[blue,hist={bins=30}] table [y index = 0,col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
@@ -237,13 +239,13 @@ profits in the remaining realisations.
     \begin{axis}[
       xlabel=$P^{\alpha^C}$,
       title={Simulations of CEC policy},
-      xmin=0.57, xmax=0.69,
-      ymax=180,
+      xmin=0.565, xmax=0.695,
+      ymax=2000,
       ]
       \addplot[blue,hist={bins=30}] table [y index = 1,col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
-      \draw[<-] (axis cs:0.62,30) --
-      (axis cs:0.605,60) node[anchor=south] {Fatter lower tail};
+      \draw[<-] (axis cs:0.62,220) --
+      (axis cs:0.605,600) node[anchor=south] {Fatter lower tail};
     \end{axis}
   \end{tikzpicture}
 
@@ -256,15 +258,15 @@ profits in the remaining realisations.
       ]
       \addplot[red,hist={bins=30}] table [y expr = {(\thisrowno{0}-\thisrowno{1})},col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
-      \draw[dashed] (axis cs:0,-30) -- (axis cs:0,600);
-      \draw[<-] (axis cs:0.017,100) -- (axis cs:0.015,200)
+      \draw[dashed] (axis cs:0,-30) -- (axis cs:0,6000);
+      \draw[<-] (axis cs:0.017,1000) -- (axis cs:0.015,2000)
       node[anchor=south] {$\alpha^B$ best};
-      \draw[<-] (axis cs:-0.003,400) -- (axis cs:0.005,400) node[anchor=west] {$\alpha^C$ best};
+      \draw[<-] (axis cs:-0.003,4000) -- (axis cs:0.005,4000) node[anchor=west] {$\alpha^C$ best};
     \end{axis}
   \end{tikzpicture}
   \todo[inline]{Show relative difference
     $(P^{\alpha^B}-P^{\alpha^C})/P^{\alpha^B}$ instead?}
-  \caption{This shows the distributions from $1000$ samples of
+  \caption{This shows the distributions from \num{10000} samples of
     the profits of following the Bellman and CEC policies.
     The sample mean $\mathbb E_W[P^{\alpha^B}-P^{\alpha^C}]\approx 3.8\times
     10^{-3}$, confirms that Bellman is better on average, as it should be.
@@ -273,6 +275,110 @@ profits in the remaining realisations.
   }\label{fig:bellman_det_vals}
 \end{figure}
 
+\todo[inline]{Add OLFC section here with table similar to \Cref{tbl:paramcomparisons}?}
+
+\subsection{Bellman and CEC parameter comparisons}\label{sec:parameter_comparison}
+In the previous sections, our numerical experiments have only shown
+results for a fixed combination of the five parameters
+termination time $T$, unsold items cost $C$, uncertainty $\gamma$, and
+demand function parameters $q_1,q_2$.
+In this section we explore the differences between the Bellman policy
+and the CEC policy for a larger parameter range.
+The formula for $a^C$ in \Cref{eq:cec_policy} indicates that the
+initial price is largely determined by the relationship between
+$Tq_1$ and $q_2$, and hence we choose to keep $T=3$ fixed whilst
+varying $q_1$ and $q_2$.
+We are interested in the difference between the profit following
+a Bellman policy $\alpha^B$ and a CEC policy $\alpha^C$.
+The policy $\alpha^B$ is computed numerically, and
+$\alpha^C$ is obtained using the function $a^C$ from
+the formula in \Cref{eq:cec_policy}.
+
+\todo[inline]{Move table to here?}
+In particular, the difference between the two policies is measured
+using the $L^2$-norm with respect to the probability distribution
+induced by the disturbance $(W_1,W_2,\dots,W_T)$, that is
+\begin{equation}
+  \left\|P^{\alpha^B}-P^{\alpha^C}\right\|_2
+  =\sqrt{\mathbb E_W\left[{( P^{\alpha^B}-P^{\alpha^C} )}^2 \right]}.
+\end{equation}
+
+To reduce the number of combinations of parameters, we make the
+simplification to choose only
+four combinations of
+$(C,\gamma)\in\{0.5,1\}\times\{0.05,0.1\}$.
+Then,
+for each combination of $(C,\gamma)$,
+we can create a heatmap of the difference between the two policy
+functions by varying the parameters $q_1,q_2$.
+The relative $L^2$ difference between the CEC and Bellman policy outcomes
+is shown in \Cref{fig:profit_diff_heatmaps}. The norms were approximated
+with $1000$ samples from $(W_1,W_2,\dots,W_T)$.
+Comparing the left and right column, we see that the relative difference doubles as
+the standard deviation $\gamma$ is doubled. The cost $C$ plays a large
+role, both in terms of the shape of the difference surface and its
+magnitude.
+The black region at the bottom right of the plots correspond to popular,
+low-elasticity products where both policies choose to sell at the
+maximum price $a=1$.
+\begin{figure}[htbp]
+  \includegraphics[width=\textwidth]{./img/profit_diff_heatmaps}
+  \caption{The relative $L^2$ difference
+    $\|P^{\alpha^B}-P^{\alpha^C}\|_2/\|P^{\alpha^B}\|_2$ representing
+    how different the CEC policy is to the optimal Bellman policy.
+    Each plot defines a combination of $(C,\gamma)$, whilst
+    the axes vary the parameters $q_1,q_2$ of the demand function
+    $q(a)=q_1e^{-q_2a}$.
+    The white dot on the bottom, left plot corresponds to the
+    parameters chosen for the experiments in this article.
+  }\label{fig:profit_diff_heatmaps}
+\end{figure}
+
+The parameters chosen in this article's numerical experiments
+are $C=1,\gamma=0.05,q_1=e^2/3\approx2.5,q_2=3$. This point lies
+in the region where the relative difference is around $0.016$ --- see the
+white dot in the
+bottom, left subfigure in \Cref{fig:profit_diff_heatmaps}.
+This difference is in the middle of that seen for all the
+combinations of parameters, so the conclusions made in the article
+should be considered as relevant for a wider range of systems.
+\Cref{tbl:paramcomparisons} provides further data to underscore
+the claim that the CEC policy
+outperforms the Bellman policy the
+majority of events, at the expense of a stronger underperformance
+for the remainder of the events. Notably, the CEC policy is better
+more than 50\% of the time for all the parameter
+combinations considered in this article. The values in
+\Cref{tbl:paramcomparisons} were approximated using $10,000$ samples
+from $W$, and their corresponding parameter combinations are shown as
+grey dots in \Cref{fig:profit_diff_heatmaps}.
+
+\begin{table}[htbp]
+  \centering
+  \begin{tabular}{llllcccc}
+    $C$ & $\gamma$ & $q_1$ & $q_2$ & $\mathcal Q_{0.05}$
+    &Median & $\mathcal Q_{0.95}$ &$L_2$\\
+    \toprule
+    $0.25$ & $0.05$ & $2.0$ & $4.0$  & \textbf{-0.4} & \textbf{-0.3} & \textbf{0.6} & \textbf{0.4}\\
+    $0.25$ & $0.1$ & $1.33$ & $2.67$ & \textbf{-0.5} & \textbf{-0.0} & \textbf{0.6} & \textbf{0.3}\\
+    $0.5$ & $0.05$ & $2.67$ & $4.0$  & \textbf{-0.6} & \textbf{-0.6} & \textbf{1.9} & \textbf{1.1}\\
+    $0.5$ & $0.1$ & $2.0$ & $2.67$   & \textbf{-0.9} & \textbf{-0.6} & \textbf{1.9} & \textbf{1.2}\\
+    $1.0$ & $0.05$ & $1.33$ & $4.0$  & \textbf{-1.2} & \textbf{-1.1} & \textbf{5.3} & \textbf{2.7}\\
+    $1.0$ & $0.1$ & $2.67$ & $2.67$  & \textbf{-1.5} & \textbf{-1.3} & \textbf{5.8} & \textbf{2.9}\\
+    &&&&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$&$\times 10^{-2}$\\
+    \bottomrule
+  \end{tabular}
+  \caption{Statistics comparing $P^{\alpha^B}$ and $P^{\alpha^C}$ for six different
+    parameter combinations. The columns $\mathcal Q_s$ represent the
+    the $s^{\text{th}}$ quantile of the relative
+    difference
+    $1-P^{\alpha^C}/P^{\alpha^B}$. %Median is the same as $\mathcal Q_{0.5}$.
+    The values in the column $L_2$ refers to the relative $L_2$
+    difference $\|P^{\alpha^B}-P^{\alpha^C}\|_2/\|P^{\alpha^B}\|_2$
+    from \Cref{fig:profit_diff_heatmaps}. Each of the parameter
+    combinations correspond to a grey dot in \Cref{fig:profit_diff_heatmaps}.
+  }\label{tbl:paramcomparisons}
+\end{table}
 \biblio
 \end{document}
 
