--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@ Things I think can improve the paper (and make it more precise)
 
 
 %\appendix
-\subfile{appendix_profitdiff}
+%\subfile{appendix_profitdiff}
 
 
 \end{document}
